tests/rosetta/out/Smalltalk/cholesky-decomposition.out
/tmp/cholesky-decomposition.st:6: parse error, expected ']'
