tests/rosetta/out/Smalltalk/cholesky-decomposition.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| sqrtApprox guess i cholesky n l row j sum k printMat line demo |
sqrtApprox := [:x | guess := x.
i := 0.
[(i < 20)] whileTrue: [.
guess := (((guess + ((x / guess)))) / 2).
i := (i + 1).
].
.
guess. ].
cholesky := [:a | n := (a size).
l := {}.
i := 0.
[(i < n)] whileTrue: [.
row := {}.
j := 0.
[(j < n)] whileTrue: [.
row := row copyWith: 0.
j := (j + 1).
].
.
l := l copyWith: row.
i := (i + 1).
].
.
i := 0.
[(i < n)] whileTrue: [.
j := 0.
[(j <= i)] whileTrue: [.
sum := a at: i at: j.
k := 0.
[(k < j)] whileTrue: [.
sum := (sum - (((l at: i at: k) * (l at: j at: k)))).
k := (k + 1).
].
.
((i = j)) ifTrue: [
l at: i at: j put: sqrtApprox value: sum.
] ifFalse: [
l at: i at: j put: (sum / (l at: j at: j)).
].
j := (j + 1).
].
.
i := (i + 1).
].
.
l. ].
printMat := [:m | i := 0.
[(i < ((m size)))] whileTrue: [.
line := ''.
j := 0.
[(j < ((m at: i size)))] whileTrue: [.
line := (line + ((m at: i at: j asString))).
((j < ((((m at: i size)) - 1)))) ifTrue: [
line := (line + (' ')).
] .
j := (j + 1).
].
.
Transcript show: (line) printString; cr.
i := (i + 1).
].
. ].
demo := [:a | Transcript show: 'A:'; cr.
printMat value: a.
l := cholesky value: a.
Transcript show: 'L:'; cr.
printMat value: l. ].
demo value: {{25. 15. -5}. {15. 18. 0}. {-5. 0. 11}}.
demo value: {{18. 22. 54. 42}. {22. 70. 86. 62}. {54. 86. 174. 134}. {42. 62. 134. 106}}.
